syntax = "proto3";
//把文件拆分
//option java_multiple_files = true;
//导出包名
option java_package = "wxdgaming.boot.net.message";

//执行同步等待消息
message ReqRemote {
    int64 rpcId                     = 1;
    int32 gzip                      = 2;//1表示压缩过
    string cmd                      = 3;//执行的命令
    string params                   = 4;//用JsonObject来解析
    string rpcToken                 = 5;//用于验证的消息
}

//执行同步等待消息
message ResRemote {
    int64 rpcId                     = 1;
    int32 gzip                      = 2;//1表示压缩过
    string params                   = 3;//用JsonObject来解析
    string rpcToken                 = 4;//用于验证的消息
}